# filemanagement_dfs_service

./: AGENTS.md  BUILD.gn  CODEOWNERS  OAT.xml  README.md  README_zh.md  bundle.json  cfi_blocklist.txt  distributedfile.gni  ohos.build
adapter/cloud_adapter_example/: BUILD.gn  cloud_adapter.map
adapter/cloud_adapter_example/include/: cloud_asset_read_session_impl.h  cloud_assets_downloader_impl.h  cloud_database_impl.h  cloud_file_kit_impl.h  cloud_sync_helper_impl.h  data_sync_manager_impl.h  dk_asset.h  dk_asset_read_session.h  dk_assets_downloader.h  dk_cloud_callback.h  dk_container.h  dk_context.h  dk_database.h  dk_error.h  dk_record.h  dk_record_field.h  dk_reference.h  dk_result.h  drive_kit.h
adapter/cloud_adapter_example/src/: cloud_asset_read_session_impl.cpp  cloud_assets_downloader_impl.cpp  cloud_database_impl.cpp  cloud_file_kit_impl.cpp  cloud_sync_helper_impl.cpp  data_sync_manager_impl.cpp  dk_asset_read_session.cpp  dk_assets_downloader.cpp  dk_container.cpp  dk_database.cpp  dk_error.cpp  dk_record_field.cpp  drive_kit.cpp
dfs_utils/: AGENTS.md  BUILD.gn
dfs_utils/include/: dfs_radar.h  dfsu_exception.h  dfsu_thread.h
dfs_utils/src/: dfs_radar.cpp  dfsu_mount_argument_descriptors.cpp
frameworks/js/napi/: BUILD.gn
interfaces/innerkits/native/: BUILD.gn  i_distributedfile_service.h  i_filetransfer_callback.h
services/: 4901.xml  4902.xml  5201.json  5201.xml  5202.xml  5204.json  5204.xml  5205.json  5205.xml  5207.json  AGENTS.md  BUILD.gn  clouddaemon.cfg  clouddaemon.para  clouddaemon.para.dac  clouddiskservice.cfg  cloudfiledaemon.cfg  cloudsyncservice.para  cloudsyncservice.para.dac  distributed_file.para  distributedfile.cfg
services/clouddisk_database/: AGENTS.md  BUILD.gn  clouddisk_database.map
services/clouddisk_database/include/: clouddisk_db_const.h  clouddisk_notify.h  clouddisk_notify_const.h  clouddisk_notify_utils.h  clouddisk_rdb_transaction.h  clouddisk_rdb_utils.h  clouddisk_rdbstore.h  clouddisk_sync_helper.h  clouddisk_type_const.h  file_column.h  migration_manager.h
services/clouddisk_database/src/: clouddisk_notify.cpp  clouddisk_notify_utils.cpp  clouddisk_rdb_transaction.cpp  clouddisk_rdb_utils.cpp  clouddisk_rdbstore.cpp  clouddisk_sync_helper.cpp  file_column.cpp  migration_manager.cpp
services/clouddiskservice/: AGENTS.md  BUILD.gn  ICloudDiskService.idl
services/clouddiskservice/seccomp_policy/: BUILD.gn  clouddiskservice.seccomp.policy
services/cloudfiledaemon/: AGENTS.md  BUILD.gn
services/cloudsyncservice/: AGENTS.md  BUILD.gn  ICloudSyncService.idl
services/cloudsyncservice/decompress_config/: system_feature.json  system_feature_pc.json  unsupported_list.json
services/cloudsyncservice/include/: decompress_config_manager.h
services/cloudsyncservice/src/: decompress_config_manager.cpp
services/distributedfiledaemon/: BUILD.gn  IDaemon.idl  encaps.json
services/distributedfileservice/: BUILD.gn
test/fuzztest/: BUILD.gn
test/fuzztest/clouddaemonmanager_fuzzer/: BUILD.gn  clouddaemonmanager_fuzzer.cpp  clouddaemonmanager_fuzzer.h
test/fuzztest/clouddaemonstub_fuzzer/: BUILD.gn  clouddaemonstub_fuzzer.cpp  clouddaemonstub_fuzzer.h
test/fuzztest/clouddisknotify_fuzzer/: BUILD.gn  clouddisknotify_fuzzer.cpp  clouddisknotify_fuzzer.h
test/fuzztest/clouddownloadcallbackstub_fuzzer/: BUILD.gn  clouddownloadcallbackstub_fuzzer.cpp  clouddownloadcallbackstub_fuzzer.h
test/fuzztest/cloudsyncassetmanager_fuzzer/: BUILD.gn  cloudsyncassetmanager_fuzzer.cpp  cloudsyncassetmanager_fuzzer.h
test/fuzztest/cloudsynccallbackstub_fuzzer/: BUILD.gn  cloudsynccallbackstub_fuzzer.cpp  cloudsynccallbackstub_fuzzer.h
test/fuzztest/cloudsyncmanager_fuzzer/: BUILD.gn  cloudsyncmanager_fuzzer.cpp  cloudsyncmanager_fuzzer.h
test/fuzztest/cloudsyncservicestub_fuzzer/: BUILD.gn  cloudsyncservicestub_fuzzer.cpp  cloudsyncservicestub_fuzzer.h
test/fuzztest/cycletaskrunner_fuzzer/: BUILD.gn  cycletaskrunner_fuzzer.cpp  cycletaskrunner_fuzzer.h
test/fuzztest/daemonstub_fuzzer/: BUILD.gn  daemonstub_fuzzer.cpp  daemonstub_fuzzer.h  project.xml
test/fuzztest/daemonstub_handlecloseP2Pconnection_fuzzer/: BUILD.gn
test/fuzztest/daemonstub_handleopenP2PconnectionEx_fuzzer/: BUILD.gn
test/fuzztest/daemonstub_handleopenP2Pconnection_fuzzer/: BUILD.gn  daemonstub_handleopenP2Pconnection_fuzzer.cpp
test/fuzztest/daemonstub_handlepreparesession_fuzzer/: BUILD.gn  daemonstub_handlepreparesession_fuzzer.cpp
test/fuzztest/daemonstub_handlerequestsendfile_fuzzer/: BUILD.gn  daemonstub_handlerequestsendfile_fuzzer.h
test/fuzztest/daemonstubhandleConnectDfs_fuzzer/: BUILD.gn  daemonstub_handleConnectDfs_fuzzer.cpp  daemonstub_handleConnectDfs_fuzzer.h
test/fuzztest/daemonstubhandleDisconnectDfs_fuzzer/: BUILD.gn  daemonstub_handleDisconnectDfs_fuzzer.cpp  daemonstub_handleDisconnectDfs_fuzzer.h
test/fuzztest/daemonstubhandlecloseP2Pconnection_fuzzer/: BUILD.gn  daemonstub_handlecloseP2Pconnection_fuzzer.cpp  daemonstub_handlecloseP2Pconnection_fuzzer.h
test/fuzztest/daemonstubhandleopenP2PconnectionEx_fuzzer/: BUILD.gn  daemonstub_handleopenP2PconnectionEx_fuzzer.cpp  daemonstub_handleopenP2PconnectionEx_fuzzer.h
test/fuzztest/daemonstubhandleopenP2Pconnection_fuzzer/: BUILD.gn  daemonstub_handleopenP2Pconnection_fuzzer.cpp  daemonstub_handleopenP2Pconnection_fuzzer.h
test/fuzztest/daemonstubhandlepreparesession_fuzzer/: BUILD.gn  daemonstub_handlepreparesession_fuzzer.cpp  daemonstub_handlepreparesession_fuzzer.h
test/fuzztest/daemonstubhandlerequestsendfile_fuzzer/: BUILD.gn  daemonstub_handlerequestsendfile_fuzzer.cpp
test/fuzztest/daemonstubreadbatchuris_fuzzer/: BUILD.gn  daemonstubreadbatchuris_fuzzer.cpp  (+1 more)
test/moduletest/: BUILD.gn
test/unittests/: BUILD.gn
utils/: AGENTS.md  BUILD.gn  libdistributedfiledentry.map  libdistributedfileutils.map  libdistributedfileutils_lite.map
utils/inner_api/: block_object.h  cloud_file_error.h  cloud_file_log.h  cloud_file_timer.h  cloud_file_utils.h  cloud_meta_file.h  cloud_pref_impl.h  fdsan.h  ffrt_timer.h  visibility.h
(+1378 files in other folders)
