# Copyright (C) 2021-2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/filemanagement/dfs_service/distributedfile.gni")

group("services_target") {
  deps = [
    "${services_path}:distributed_file.para",
    "${services_path}:distributedfile_etc",
    "${services_path}:distributedfile_sa_profile",
    "${services_path}/clouddisk_database:clouddisk_database",
    "${services_path}/cloudfiledaemon:cloudfiledaemon",
    "${services_path}/cloudsyncservice:cloudsync_sa",
    "${services_path}/distributedfiledaemon:libdistributedfiledaemon",
  ]
}

group("cloudsync_kit_inner_target") {
  deps =
      [ "interfaces/inner_api/native/cloudsync_kit_inner:cloudsync_kit_inner" ]
}

group("cloud_daemon_kit_inner_target") {
  deps = [
    "interfaces/inner_api/native/cloud_daemon_kit_inner:cloud_daemon_kit_inner",
  ]
}

group("cloudsync_asset_kit_inner_target") {
  deps = [
    "interfaces/inner_api/native/cloudsync_kit_inner:cloudsync_asset_kit_inner",
  ]
}

group("distributed_file_daemon_kit_inner_target") {
  deps = [ "services/distributedfiledaemon:distributed_file_daemon_kit_inner" ]
}

group("dfs_test_moudule") {
  testonly = true
  deps = [
    "${services_path}/distributedfiledaemon/test/unittest:device_info_test",
    "${services_path}/distributedfiledaemon/test/unittest:device_manager_agent_test",
    "${services_path}/distributedfiledaemon/test/unittest:devsl_dispatcher_test",
    "${services_path}/distributedfiledaemon/test/unittest:kernel_talker_test",
    "${services_path}/distributedfiledaemon/test/unittest:os_account_observer_test",
    "${services_path}/distributedfiledaemon/test/unittest:session_pool_test",
    "${services_path}/distributedfiledaemon/test/unittest:softbus_agent_test",
    "${services_path}/distributedfiledaemon/test/unittest:softbus_file_receive_listener_test",
    "${services_path}/distributedfiledaemon/test/unittest:softbus_file_send_listener_test",
    "${services_path}/distributedfiledaemon/test/unittest:softbus_handler_test",
    "${services_path}/distributedfiledaemon/test/unittest:softbus_session_dispatcher_test",
    "${services_path}/distributedfiledaemon/test/unittest:softbus_session_listener_test",
    "${services_path}/distributedfiledaemon/test/unittest:softbus_session_pool_test",
    "${services_path}/distributedfiledaemon/test/unittest:softbus_session_test",
    "${services_path}/distributedfiledaemon/test/unittest/mountpoint:mount_manager_test",
    "${services_path}/distributedfiledaemon/test/unittest/mountpoint:mount_point_test",
    "test/moduletest:DistributedFileDaemonServiceTest",
  ]
}

group("cloudsync_test_module") {
  testonly = true
  deps = [ "test/unittests:cloudsyncunittests" ]
}

group("distributedfile_test_module") {
  testonly = true
  deps = [ "test/unittests:distributedfileunittests" ]
}
