# Copyright (C) 2021-2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/filemanagement/dfs_service/distributedfile.gni")

group("services_target") {
  deps = [
    "${services_path}:cloudsyncservice.para",
    "${services_path}:cloudsyncservice.para.dac",
    "${services_path}:distributed_file.para",
    "${services_path}:distributedfile_etc",
    "${services_path}:distributedfile_sa_profile",
    "${services_path}/clouddisk_database:clouddisk_database",
    "${services_path}/cloudfiledaemon:cloudfiledaemon",
    "${services_path}/cloudsyncservice:cloudsync_sa",
  ]

  if (dfs_service_feature_enable_dist_file_daemon) {
    deps +=
        [ "${services_path}/distributedfiledaemon:libdistributedfiledaemon" ]
  }
  if (dfs_service_feature_enable_cloud_adapter) {
    deps += [ "${services_path}:cloudfiledaemon_etc" ]
  }
  if (dfs_service_feature_enable_cloud_disk) {
    deps += [
      "${services_path}:clouddiskservice_sa_profile",
      "${services_path}/clouddiskservice:clouddiskservice_sa",
      "${services_path}:clouddiskservice_etc",
      "${services_path}/clouddiskservice/seccomp_policy:disk_monitor_seccomp_filter",
    ]
  }
}

group("cloudsync_kit_inner_target") {
  deps =
      [ "interfaces/inner_api/native/cloudsync_kit_inner:cloudsync_kit_inner" ]
}

group("cloud_daemon_kit_inner_target") {
  deps = [
    "interfaces/inner_api/native/cloud_daemon_kit_inner:cloud_daemon_kit_inner",
  ]
}

group("cloud_file_kit_inner_target") {
  deps = [ "interfaces/inner_api/native/cloud_file_kit_inner:cloudfile_kit" ]
}

group("clouddiskservice_kit_inner_target") {
    deps =
    [ "interfaces/inner_api/native/clouddiskservice_kit_inner:clouddiskservice_kit_inner" ]
}

group("cloudsync_asset_kit_inner_target") {
  deps = [
    "interfaces/inner_api/native/cloudsync_kit_inner:cloudsync_asset_kit_inner",
  ]
}

group("distributed_file_daemon_kit_inner_target") {
  deps = [ "services/distributedfiledaemon:distributed_file_daemon_kit_inner" ]
}

group("dfs_test_moudule") {
  testonly = true
  deps = [
    "${services_path}/distributedfiledaemon/test/unittest:unittest",
    "${services_path}/distributedfiledaemon/test/unittest/all_connect:all_connect_manager_test",
    "${services_path}/distributedfiledaemon/test/unittest/connect_count:connect_count_test",
    "${services_path}/distributedfiledaemon/test/unittest/ipc:unittest",
    "${services_path}/distributedfiledaemon/test/unittest/mountpoint:mount_manager_test",
    "${services_path}/distributedfiledaemon/test/unittest/mountpoint:mount_point_test",
    "test/moduletest:DistributedFileDaemonServiceTest",
  ]

  if (support_device_profile) {
    deps +=
    [ "${services_path}/distributedfiledaemon/test/unittest/device/device_profile_adapter:device_profile_adapter_test" ]
  }
}

group("cloudsync_test_module") {
  testonly = true
  deps = [ "test/unittests:cloudsyncunittests" ]
}

group("distributedfile_test_module") {
  testonly = true
  deps = [ "test/unittests:distributedfileunittests" ]
}
