# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/filemanagement/dfs_service/distributedfile.gni")

config("clouddisk_database_config") {
  visibility = [ ":*" ]
}

ohos_shared_library("clouddisk_database") {
  branch_protector_ret = "pac_ret"
  sanitize = {
    integer_overflow = true
    ubsan = true
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  include_dirs = [
    "include",
    "${distributedfile_path}/frameworks/native/cloudsync_kit_inner_lite/include",
    "${services_path}/cloudfiledaemon/include/cloud_disk",
    "${utils_path}/cloud_disk/include",
    "${utils_path}/dentry/include",
    "${utils_path}/preference/include",
    "${utils_path}/log/include",
  ]

  sources = [
    "src/clouddisk_notify.cpp",
    "src/clouddisk_notify_utils.cpp",
    "src/clouddisk_rdb_transaction.cpp",
    "src/clouddisk_rdb_utils.cpp",
    "src/clouddisk_rdbstore.cpp",
    "src/clouddisk_sync_helper.cpp",
    "src/file_column.cpp",
  ]

  configs = [ ":clouddisk_database_config" ]
  cflags = [
    "-Wall",
    "-Werror",
    "-Wno-unused-but-set-variable",
  ]

  defines = [
    "LOG_DOMAIN=0xD00430B",
    "LOG_TAG=\"CLOUDDISK_DATABASE\"",
  ]

  deps = [
    "${innerkits_native_path}/cloudsync_kit_inner:cloudsync_kit_inner_lite",
    "${utils_path}:libdistributedfileutils",
    "${utils_path}:libdistributedfileutils_lite",
  ]

  external_deps = [
    "ability_base:zuri",
    "ability_runtime:dataobs_manager",
    "c_utils:utils",
    "ffrt:libffrt",
    "hilog:libhilog",
    "ipc:ipc_single",
    "libfuse:libfuse",
    "relational_store:native_rdb",
  ]

  if (!dfs_service_feature_enable_cloud_adapter) {
    deps += [
      "${distributedfile_path}/adapter/cloud_adapter_example:cloud_adapter",
    ]
  } else {
    external_deps += [ "drivekit_native:drivekit" ]
  }

  use_exceptions = true
  part_name = "dfs_service"
  subsystem_name = "filemanagement"
}
